--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ click==8.1.8
 colorama==0.4.6
 dnspython==2.7.0
 Flask==3.1.0
-Flask-Cors==3.0.10
+Flask-Cors>=3.0
 itsdangerous==2.2.0
 Jinja2==3.1.5
 MarkupSafe==3.0.2
